2009-10-04  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/proj-comp.el:  Don't require ede/pmake at toplevel.
	(ede-proj-makefile-insert-variables): Require ede/pmake.

2009-10-04  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (copy-directory): New defun.

	* dired-aux.el (dired-copy-file-recursive): Use it.

2009-10-04  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/ede/makefile-edit.el (makefile-beginning-of-command)
	(makefile-end-of-command):
	* cedet/srecode/srt-mode.el (semantic-beginning-of-context)
	(semantic-end-of-context): Fix previous change.  Doc fixes.

2009-10-04  Juanma Barranquero  <lekktu@gmail.com>

	* files-x.el (modify-dir-local-variable)
	(copy-dir-locals-to-file-locals-prop-line):
	* cedet/ede/makefile-edit.el (makefile-beginning-of-command)
	(makefile-end-of-command):
	* cedet/semantic/lex.el (semantic-lex-token):
	* cedet/semantic/analyze/fcn.el
	(semantic-analyze-dereference-metatype-1):
	* cedet/semantic/bovine/c.el (semantic-lex-cpp-define)
	(semantic-lex-cpp-undef):
	* cedet/semantic/wisent/wisent.el (wisent-skip-block):
	* cedet/srecode/srt-mode.el (semantic-beginning-of-context)
	(semantic-end-of-context): Fix typos in docstrings.

	* recentf.el (recentf-unload-function): New function.

2009-10-04  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede.el (ede-project-placeholder-cache-file):
	* cedet/semantic/db-file.el (semanticdb-default-save-directory):
	* cedet/srecode/map.el (srecode-map-save-file):
	Use locate-user-emacs-file.  Suggested by Juanma Barranquero.

2009-10-04  Glenn Morris  <rgm@gnu.org>

	* window.el (window-full-height-p): Add doc string.

2009-10-04  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-full-height-p): New function.  (Bug#4543)

2009-10-03  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/srecode/insert.el: Require srecode/args.

	* cedet/srecode/args.el: Require srecode/dictionary instead of
	srecode/insert.

	* cedet/srecode/srt-mode.el (srecode-template-mode): Doc fix.
